@@ -45,6 +45,7 @@ Please visit http://aegisub.net to download latest version
 - Added an inline MyThes-based Thesaurus. (AMZ)
 - Added two options ("Audio HD Cache Location" and "Audio HD Cache Name") that allows you to specify where to keep the audio cache. (AMZ)
 - Flexibible audio cache names now allow you to have more than one copy of Aegisub open with audio loaded to HD cache. (AMZ)
+- Improved Splash Screen behavior to show up even if the program is frozen loading subtitles, and to center on the current display. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
